# clockwork

./: .a 3.out.icloud  .a.txt.swp  .a_cp_fail_1.txt.swp  .app.cpp.swp  .gitignore  .travis.yml  1  1x1conv_compute.h  @  B_opt_accel.cpp  B_opt_compute_units 2.h  B_opt_compute_units.h  C_opt.cpp  C_opt.h  C_opt_compute_units.h  D_naive.cpp  D_naive.h  D_naive.soda  D_naive_config.ini  D_naive_host.cpp  D_naive_kernel.h  D_naive_sw_bmp_test_harness.cpp  D_opt.cpp  D_opt.h  D_opt_compute_units.h  D_opt_host.cpp  D_opt_sw_bmp_test_harness.cpp  I.cpp  Makefile  README.md  SRAM_address.csv  TOP_address.csv  TOP_address_tapeout.csv  \  a 2.out  a.txrt  accumulate_3.h  accumulation_compute.h  accumulation_memory.cpp  accumulation_simple_compute.h  (+669 more)
barvinok-0.41/: 4coins  4coins.cc  AUTHORS  ChangeLog  GIT_HEAD_ID  Makefile  Makefile.am  Makefile.in  NTL_5_3_2.patch  NTL_QQ.cc  NTL_QQ.lo  README  aclocal.m4  barvinok-uninstalled.pc  barvinok-uninstalled.sh  barvinok.cc  barvinok.lo  barvinok.pc  barvinok_bound  barvinok_count  barvinok_count.c  barvinok_e.cc  barvinok_e.lo  barvinok_ehrhart  barvinok_ehrhart.cc  barvinok_ehrhart_options.c  barvinok_ehrhart_options.h  barvinok_enumerate  barvinok_enumerate.cc  barvinok_enumerate_e  barvinok_enumerate_e.cc  barvinok_enumerate_e_options.c  barvinok_enumerate_e_options.h  barvinok_enumerate_options.c  barvinok_enumerate_options.h  barvinok_summate  barvinok_summate.c  barvinok_union  barvinok_union.cc  barvinok_union_options.c  (+202 more)
barvinok-0.41/.deps/: 4coins.Po  NTL_QQ.Plo  barvinok.Plo  barvinok_count.Po  barvinok_e.Plo  barvinok_ehrhart.Po  barvinok_ehrhart_options.Po  barvinok_enumerate.Po  barvinok_enumerate_e-barvinok_enumerate_e.Po  barvinok_enumerate_e-barvinok_enumerate_e_options.Po  barvinok_enumerate_e-evalue_convert.Po  barvinok_enumerate_e-evalue_convert_options.Po  barvinok_enumerate_e-fdstream.Po  barvinok_enumerate_e-skewed_genfun.Po  barvinok_enumerate_e-verif_ehrhart.Po  barvinok_enumerate_e-verify.Po  barvinok_enumerate_e-verify_series.Po  barvinok_enumerate_options.Po  barvinok_summate.Po  barvinok_union.Po  barvinok_union_options.Po  basis_reduction.Plo  bernoulli.Plo  bfcounter.Plo  binomial.Plo  bound.Po  cone_hilbert_basis.Po  cone_integer_hull.Po  conversion.Plo  counter.Plo  decomposer.Plo  dpoly.Plo  edomain.Po  euler.Plo  evalue.Plo  evalue_convert.Po  evalue_convert_options.Po  evalue_isl.Plo  evalue_read.Po  evalue_util.Po  (+54 more)
barvinok-0.41/.libs/: libbarvinok.la  libbarvinok.lai  polyhedron_sample  vector_partition_chambers
barvinok-0.41/barvinok/: NTL.h.broken  NTL.h.normal  barvinok.h  basis_reduction.h  evalue.h  isl.h  polylib.h  sample.h  set.h.broken
barvinok-0.41/doc/: Internal.tex  Makefile  Makefile.am  Makefile.in  applications.tex  barvinok.bib  barvinok.gdf  barvinok.tex  glosstex.ist  isl.tex  mydefs.sty  polymake.tex  reports.tex
barvinok-0.41/interface/: all_barvinok.c  all_barvinok.h  isl.py.top  isl.py.top.pet
barvinok-0.41/interface/.deps/: libdep_a-all_barvinok.Po
barvinok-0.41/isl/: Makefile  config.status  gitversion.h  isl-uninstalled.pc  isl-uninstalled.sh  isl.pc  isl_bound  isl_cat  isl_closure  isl_codegen  isl_config.h  isl_flow  isl_flow_cmp  isl_pip  isl_polyhedron_detect_equalities  isl_polyhedron_minimize  isl_polyhedron_sample  isl_polytope_scan  isl_schedule  isl_schedule_cmp  isl_test  isl_test_int  libisl.la  libtool  schedule_test.sh
barvinok-0.41/isl/.deps/: basis_reduction_tab.Plo  bound.Po  (+89 more)
barvinok-0.41/m4/: ax_check_ntl.m4  ax_create_pkgconfig_info.m4  ax_detect_git_head.m4  ax_submodule.m4  ax_unordered_map.m4
barvinok-0.41/omega_interface/: Exit.cc  convert.cc  convert.h  count.cc  count.h
barvinok-0.41/parker/: Makefile  Makefile.am  Makefile.in  README  construction.c  count_paths.c  count_solutions.cc  count_solutions.h
barvinok-0.41/pet/: ChangeLog  GIT_HEAD_ID  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  isl.py  killed_locals.cc  pet.cc  scan.cc  substituter.cc  summary.c
barvinok-0.41/polylib/: Makefile  Makefile.am  Makefile.in  Zpolytestgmp  aclocal.m4  c2p  config.h  config.h.in  config.status  configure  configure.in  count  disjoint_union_adj  disjoint_union_sep  ehrhart_lower_bound  ehrhart_quick_apx  ehrhart_rankinggmp  ehrhart_uniongmp  ehrhart_upper_bound  example  findv  libpolylibgmp.la  libpolylibgmp_la-Lattice.lo  libpolylibgmp_la-Matop.lo  libpolylibgmp_la-NormalForms.lo  libpolylibgmp_la-SolveDio.lo  libpolylibgmp_la-Zpolyhedron.lo  libpolylibgmp_la-alpha.lo  libpolylibgmp_la-compress_parms.lo  libpolylibgmp_la-ehrhart.lo  libpolylibgmp_la-errormsg.lo  libpolylibgmp_la-errors.lo  libpolylibgmp_la-eval_ehrhart.lo  libpolylibgmp_la-ext_ehrhart.lo  libpolylibgmp_la-homogenization.lo  libpolylibgmp_la-matrix.lo  libpolylibgmp_la-matrix_addon.lo  libpolylibgmp_la-matrix_permutations.lo  libpolylibgmp_la-param.lo  libpolylibgmp_la-polyhedron.lo  (+16 more)
barvinok-0.41/polymake/: Makefile.in  README  configure  configure.in  convert.cc  convert.h  h_star_vector.cc  lattice_points.cc
barvinok-0.41/tests/: 0D  0D-2  andreas  decomposition1  decomposition10  decomposition11  decomposition12  decomposition13  decomposition14  decomposition15  decomposition16  decomposition17  decomposition18  decomposition19  decomposition2  decomposition20  decomposition21  decomposition3  decomposition4  decomposition5  decomposition6  decomposition7  decomposition8  decomposition9  dependence  e16  empty  empty2  empty3  empty4  empty5  empty6  empty7  equality  equality2  equality3  equality4  equality5  equality6  example2  (+40 more)
barvinok-0.41/zsolve/: Makefile  Makefile.am  Makefile.in  banner.h  cputime.c  cputime.h  defs.c  defs.h  defs.lo  graver  hilbert  indexarray.c  indexarray.h  indexarray.lo  lattice.c  lattice.h  lattice.lo  libzsolve.c  libzsolve.h  libzsolve.la  libzsolve.lo  linearsystem.c  linearsystem.h  linearsystem.lo  matrix.c  matrix.h  matrix.lo  opts.c  opts.h  solve.c  valuetrees.c  valuetrees.h  valuetrees.lo  varproperties.c  varproperties.h  varproperties.lo  vector.c  vector.h  vector.lo  vectorarray.c  (+3 more)
(+9720 files in other folders)
